# AAG-DSVDD

./: README.md  pyproject.toml
scripts/: run_banana.py  run_demo.py  train_from_csv.py
src/: run_methods.py  run_suite.py
src/baselines/: deep_sad.py  deep_svdd.py  graph_svdd_paper_qp.py
src/data/: sim_banana_moons.py
src/datasets/: banana.py  data.py
src/models/: AAG-DSVDD.py  aag_dsvdd_single_old.py
src/models/sr_graph_dsvdd/: graph.py  model.py  train.py
tests/: test_smoke.py
