[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aag-ss-deepsvdd"
version = "0.1.0"
description = "Anomaly-Aware Graph-Based Semi-Supervised Deep SVDD (AAG-SS-DeepSVDD)"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Your Name"}]

dependencies = [
  "torch>=2.1",
  "numpy>=1.24",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "tqdm>=4.66",
]

[tool.setuptools.packages.find]
where = ["src"]
